# LoRA_Easy_Training_scripts_Backend

./: .gitmodules  DOCKER_GUIDE.md  Dockerfile  Makefile  QUICK_START.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
custom_scheduler/LoraEasyCustomOptimizer/: automagic_adams.py  automagic_sinkgd.py
scripts/: init-uv.sh
utils/: validation.py
