[project]
name = "lora-easy-training-scripts-backend"
version = "0.1.0"
description = "LoRa Easy Training Script Backend"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "bitsandbytes==0.45.5",
    "came-pytorch>=0.1.3",
    "dadaptation>=3.2",
    "library",
    "loraeasycustomoptimizer",
    "lycoris-lora>=3.2.0.post2",
    "pycloudflared>=0.2.0",
    "pyngrok>=7.2.9",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "starlette>=0.47.0",
    "uvicorn[standard]>=0.34.3",
    "wandb>=0.20.0",
    "wheel>=0.45.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }
]
xformers = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" }
]
loraeasycustomoptimizer = { path = "custom_scheduler" }
library = { path = "sd_scripts" }
lycoris-lora = { path = "lycoris" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
