[project]
name = "lora-easy-training-scripts-backend"
version = "0.1.0"
description = "Lora Easy Training Script Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.2.1",
    "altair==5.5.0",
    "bitsandbytes==0.45.5",
    "came-pytorch==0.1.3",
    "cmake==4.0.2",
    "dadaptation==3.2",
    "diffusers==0.32.1",
    "easygui==0.98.3",
    "einops==0.8.0",
    "ftfy==6.3.1",
    "hf-xet==1.1.2",
    "hpsv2==1.2.0",
    "huggingface-hub[hf-xet]==0.27.1",
    "imagesize==1.4.1",
    "kornia==0.8.1",
    "library",
    "lion-pytorch==0.2.3",
    "loraeasycustomoptimizer",
    "lycoris-lora>=3.2.0.post2",
    "matplotlib==3.10.1",
    "narwhals==1.34.1",
    "ninja==1.11.1.4",
    "opencv-python==4.10.0.84",
    "prodigy-plus-schedule-free==1.9.2",
    "prodigyopt==1.1.1",
    "pycloudflared>=0.2.0",
    "pyngrok>=7.2.9",
    "pytorch-lightning==2.5.0.post0",
    "pytorch-optimizer==3.5.1",
    "pywavelets==1.8.0",
    "requests>=2.32.3",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "schedulefree==1.4",
    "scipy==1.15.2",
    "sentencepiece==0.2.0",
    "setuptools==80.9.0",
    "starlette>=0.47.0",
    "tensorboard==2.19.0",
    "toml==0.10.2",
    "transformers==4.48.0",
    "triton==3.3.0 ; sys_platform == 'linux'",
    "triton-windows==3.3.1.post19 ; sys_platform == 'win32'",
    "uvicorn[standard]>=0.34.3",
    "voluptuous==0.15.2",
    "wandb==0.19.11",
    "wheel==0.45.1",
    "xformers==0.0.30",
]

[tool.uv.sources]
library = { path = "sd_scripts" }
lycoris-lora = { path = "lycoris" }
loraeasycustomoptimizer = { path = "custom_scheduler" }
