[project]
name = "lora-easy-training-scripts-backend"
version = "0.1.0"
description = "LoRA Easy Training Scripts Backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "LoRA Easy Training Scripts Team" }
]
license = "Apache-2.0"

dependencies = [
    # Core web framework
    "starlette",
    "uvicorn[standard]",
    "requests",

    # ML/Training core dependencies
    "torch>=2.7.0",
    "triton>=3.1.0",
    "accelerate>=1.2.0",
    "diffusers>=0.32.0",
    "transformers>=4.48.0",
    "safetensors>=0.5.0",
    "huggingface-hub>=0.27.0",

    # Optimizers and schedulers
    "dadaptation",
    "came-pytorch",
    "prodigyopt",
    "lion-pytorch",
    "schedulefree",
    "pytorch-optimizer",

    # Scientific computing
    "scipy",
    "numpy",
    "matplotlib",
    "opencv-python",
    "einops",
    "kornia",
    "pywavelets",

    # ML utilities
    "wandb",
    "tensorboard",
    "rich",
    "toml",
    "voluptuous",
    "sentencepiece",
    "ftfy",
    "imagesize",

    # Platform-specific dependencies
    "bitsandbytes>=0.45.0",
    "xformers>=0.0.30",

    # Networking and tunneling
    "pyngrok",
    "pycloudflared",

    # Build tools
    "wheel",
    "setuptools",
    "cmake",
    "ninja",

    # Additional ML libraries
    "easygui",
    "hf-xet",
    "hpsv2",
    "narwhals",
    "pytorch-lightning",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["installables*", "utils*", "scripts*", "dist*"]

[tool.uv.sources]
library = { path = "sd_scripts", editable = true }
lycoris-lora = { path = "lycoris", editable = true }
LoraEasyCustomOptimizer = { path = "custom_scheduler", editable = true }


[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100